--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id='meat'>
 
 	<div id='prodiv'>
-		<a id='probut' href='https://chriso91.github.io/projects'>Projects</a>
+		<a id='probut' href='https://chriso91.github.io/menu'>Projects</a>
 	</div>
 	
 		<h1 class='title'>Free Code Camp </br>Weather App</h1>
